[gd_scene load_steps=18 format=3 uid="uid://pk8qa6077cx8"]

[ext_resource type="Script" path="res://chars/basechar.gd" id="1_qlr3n"]
[ext_resource type="Texture2D" uid="uid://csp543gimalsm" path="res://assets/units/player/maincharacter.png" id="2_ju4gu"]
[ext_resource type="Texture2D" uid="uid://dq8a221g8o4do" path="res://assets/units/player/maincharacter_black.png" id="2_tyets"]
[ext_resource type="PackedScene" uid="uid://cfc0l222skq8m" path="res://ui/ui.tscn" id="3_efija"]
[ext_resource type="PackedScene" uid="uid://us6cw7bv6kwn" path="res://scripts/shadow_walk_node.tscn" id="3_xug3k"]
[ext_resource type="Texture2D" uid="uid://8xosooq7ho7q" path="res://assets/Player_character/Side/walk_player_side0000.png" id="4_ee831"]
[ext_resource type="Texture2D" uid="uid://b84fhf3257hbo" path="res://assets/Player_character/Side/walk_player_side0001.png" id="5_v4uss"]
[ext_resource type="Texture2D" uid="uid://c5kak8ym8outv" path="res://assets/Player_character/Side/walk_player_side0002.png" id="6_ajhox"]
[ext_resource type="Texture2D" uid="uid://b4de0dh2y0e0g" path="res://assets/Player_character/Side/walk_player_side0003.png" id="7_8y46o"]
[ext_resource type="Texture2D" uid="uid://bsw6ij1iv1xm4" path="res://assets/Player_character/Side/walk_player_side0004.png" id="8_msgst"]
[ext_resource type="Texture2D" uid="uid://retwaotv0c03" path="res://assets/Player_character/Side/walk_player_side0005.png" id="9_tc5pf"]
[ext_resource type="Texture2D" uid="uid://bp0sstmis7e7b" path="res://assets/Player_character/Side/walk_player_side0006.png" id="10_r23fd"]
[ext_resource type="Texture2D" uid="uid://c63pv7nbvquks" path="res://assets/Player_character/Side/walk_player_side0007.png" id="11_xl325"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gbgqy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tyets")
}],
"loop": true,
"name": &"black_idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tyets")
}],
"loop": true,
"name": &"black_walking_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tyets")
}],
"loop": true,
"name": &"black_walking_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tyets")
}],
"loop": true,
"name": &"black_walking_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ju4gu")
}],
"loop": true,
"name": &"white_idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ju4gu")
}],
"loop": true,
"name": &"white_walking_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ee831")
}, {
"duration": 1.0,
"texture": ExtResource("5_v4uss")
}, {
"duration": 1.0,
"texture": ExtResource("6_ajhox")
}, {
"duration": 1.0,
"texture": ExtResource("7_8y46o")
}, {
"duration": 1.0,
"texture": ExtResource("8_msgst")
}, {
"duration": 1.0,
"texture": ExtResource("9_tc5pf")
}, {
"duration": 1.0,
"texture": ExtResource("10_r23fd")
}, {
"duration": 1.0,
"texture": ExtResource("11_xl325")
}],
"loop": true,
"name": &"white_walking_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ju4gu")
}],
"loop": true,
"name": &"white_walking_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibu7d"]
size = Vector2(138, 263)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fett5"]
size = Vector2(8, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_heg22"]
radius = 56.0
height = 240.0

[node name="basechar" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_qlr3n")

[node name="shadow_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="shadow" type="AnimatedSprite2D" parent="shadow_checker"]
visible = false
modulate = Color(0, 0, 0, 0.384314)
position = Vector2(-61, 162)
skew = 0.698132
sprite_frames = SubResource("SpriteFrames_gbgqy")
animation = &"white_idle_down"
flip_v = true

[node name="shadow_collision" type="CollisionShape2D" parent="shadow_checker"]
position = Vector2(-4, 2.5)
shape = SubResource("RectangleShape2D_ibu7d")

[node name="white_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gbgqy")
animation = &"white_walking_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, -36)
shape = SubResource("RectangleShape2D_fett5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, -4)
zoom = Vector2(1.8, 1.8)

[node name="UI" parent="Camera2D" instance=ExtResource("3_efija")]

[node name="auto_path" type="NavigationAgent2D" parent="."]

[node name="rotators" type="Node2D" parent="."]
position = Vector2(-117, -3)

[node name="shadow_walk_node" parent="rotators" instance=ExtResource("3_xug3k")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_heg22")

[node name="cheat_code" type="RichTextLabel" parent="."]
offset_left = -145.0
offset_top = -205.0
offset_right = 221.0
offset_bottom = -137.0
theme_override_font_sizes/normal_font_size = 52

[connection signal="input_event" from="." to="." method="_on_input_event"]
